# ds_rust_experiments

./: .gitignore  .gitmodules  README.md
asanx/: Cargo.toml  Makefile  README.md
complex_plugins/: Makefile.am  README  configure.ac
complex_plugins/controller/: Cargo.toml  Makefile.am
complex_plugins/controller/src/: main.rs
complex_plugins/plugin_c/: Makefile.am  plugin.c
complex_plugins/plugin_r/: Cargo.toml  Makefile.am
complex_plugins/plugin_r/src/: lib.rs
debug_vs_release/: Cargo.toml  Makefile.am  README.md  configure.ac
debug_vs_release/src/: main.rs
dlopen_c/controller/: Cargo.toml
dlopen_c/controller/src/: main.rs
dlopen_c/plugin/: Makefile.am  configure.ac  plugin.c
dlopen_rust/: README
dlopen_rust/alice/: Cargo.toml  Makefile.am  configure.ac
dlopen_rust/alice/src/: lib.rs
dlopen_rust/bob/: Cargo.toml
dlopen_rust/bob/src/: main.rs
exposed_header_and_symbols/: Cargo.toml  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac  ehasx.h  libehasx-6abd40bba075daa9.d  libehasx-6abd40bba075daa9.rlib  libehasx.d  libehasx.la  libtool  test.c  test_ehasx
exposed_header_and_symbols/.deps/: test.Po
exposed_header_and_symbols/.libs/: libehasx.la  libehasx.lai  libehasx.so.0.0.0  lt-test_ehasx  test_ehasx
exposed_header_and_symbols/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2  traces.3
exposed_header_and_symbols/src/: lib.rs
rust_with_c/: Cargo.toml  Makefile.am  README.md  build.rs  configure.ac
rust_with_c/src/: lib.rs  native.c
simple_plugins/: README.md
simple_plugins/core/: Cargo.toml
simple_plugins/core/src/: lib.rs
simple_plugins/interfaces/: Cargo.toml
simple_plugins/interfaces/src/: lib.rs
simple_plugins/plugin_a/: Cargo.toml
simple_plugins/plugin_a/src/: lib.rs
simple_plugins/plugin_b/: Cargo.toml
simple_plugins/plugin_b/src/: lib.rs
weaklink/: Cargo.toml  Makefile.am  README.md  configure.ac  test_link.c
weaklink/src/: lib.rs
